--- a/DonorHub/DonorApp/templates/donor_info.html
+++ b/DonorHub/DonorApp/templates/donor_info.html
@@ -12,8 +12,10 @@
                 <th>First Name</th>
                 <th>Surname</th>
                 <th>Date of Birth</th>
+                <th>City</th>
                 <th>Gender</th>
                 <th>Blood Type</th>
+                <th>Image</th> <!-- Add a header for the image -->
                 <!-- Add other fields as needed -->
             </tr>
         </thead>
@@ -23,17 +25,24 @@
                     <td>{{ donor.Firstname }}</td>
                     <td>{{ donor.Surname }}</td>
                     <td>{{ donor.DOB }}</td>
+                    <td>{{ donor.city }}</td>
                     <td>{{ donor.get_gender_display }}</td>
                     <td>{{ donor.bloodtype }}</td>
+                    <td>
+                        {% if donor.image %}
+                            <img src="{{ donor.image.url }}" alt="Donor Image" style="width: 100px; height: auto;">
+                        {% else %}
+                            No Image Available
+                        {% endif %}
+                    </td>
                     <!-- Display other donor fields as needed -->
                 </tr>
             {% empty %}
                 <tr>
-                    <td colspan="5">No donors found.</td>
+                    <td colspan="7">No donors found.</td>
                 </tr>
             {% endfor %}
         </tbody>
     </table>
 </body>
 </html>
-
