--- a/DonorHub/DonorApp/templates/search.html
+++ b/DonorHub/DonorApp/templates/search.html
@@ -7,8 +7,12 @@
     <h1>Search Donors</h1>
     <form method="post">
         {% csrf_token %}
-        <input type="text" name="blood_type" placeholder="Enter Blood Type">
+        <label for="blood_type">Blood Type:</label>
+        <input type="text" id="blood_type" name="blood_type" placeholder="Enter Blood Type">
+        <label for="city">City:</label>
+        <input type="text" id="city" name="city" placeholder="Enter City">
         <button type="submit">Search</button>
     </form>
 </body>
 </html>
+
