--- a/DonorHub/DonorApp/templates/homepage.html
+++ b/DonorHub/DonorApp/templates/homepage.html
@@ -1,23 +1,25 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}"> <!-- Link to your CSS file -->
 </head>
 <body>
     <div class="banner">
         <div class="navbar">
             <div class="home-logo-and-title">
             <h1 class="homeTitle">DonorHub</h1>
-            <img src="logo.png" class="homepage_logo">
-            </div>
+            <img src="{% static 'images/logo.png' %}" class="homepage_logo">
+        </div>
             <ul>
                 <li><a href="http://localhost:5500/homepage.html">Home</a></li>
                 <li><a href="http://localhost:5500/about.html">About</a></li>
                 <li><a href="http://localhost:5500/contact.html">Contact</a></li>
-                <li><a href="http://localhost:5500/login.html">Login</a></li>
+                <li><a href="{% url 'login' %}">Login</a></li>
 
             </ul>
         </div>
@@ -25,12 +27,12 @@
         <div class="content">
             <h1>Blood Matters</h1>
             <p>effortlessly connect, manage, and inspire with DonorHub</p>
-            <div>
+            <!-- <div>
                 <button type="button" id="homeLogin" class="homeButton"><span class="homeLoginButton"></span>LOGIN</button>
-            </div>
+            </div> -->
         </div>
     </div>
-    <script src=".\main.js"></script>
+    <script src="{% static '/js/main.js' %}"></script>
 
 </body>
 </html>
